  advantage of pre-aggregated data to speed up faceting. (Adrien Grand)

* GITHUB#14417: Support modifying segmentInfos.counter in IndexWriter (Jialiang Guo)

* GITHUB#14426: Support determining desired off-heap memory requirements through
  KnnVectorsReader::getOffHeapByteSize (Chris Hegarty)

New Features
---------------------
(No changes)

Improvements
---------------------
* GITHUB#14458 : Add an IndexDeletion policy that retains the last N commits. (Owais Kazi)

* GITHUB#14476: Removing unnecessary splitX in ComponentTree (Ankit Jain)

* GITHUB#14602: Refactor the expressions compiler to use official ClassData BSM with indexed lookup
  (Uwe Schindler)

Optimizations
---------------------
* GITHUB#14418: Quick exit on filter query matching no docs when rewriting knn query. (Pan Guixin)

* GITHUB#14439: Efficient Histogram Collection using multi range traversal over PointTrees (Ankit Jain)

* GITHUB#14268: PointInSetQuery early exit on non-matching segments. (hanbj)

* GITHUB#14425: KeywordField.newSetQuery() reuses prefixed terms (Mikhail Khludnev)

Bug Fixes
---------------------
(No changes)

Build
---------------------
* Upgrade forbiddenapis to version 3.9.  (Uwe Schindler)

Other
---------------------
* GITHUB#14474: Minor refactor of ComponentTree (Ankit Jain)
* GITHUB#14459: Minor refactoring of DocValuesConsumer to allow subclasses to reuse some of its merge logic. (Martijn van Groningen)

* GITHUB#7145: Adding basic unit tests for SpanWithinQuery. (Jakub Slowinski)

======================= Lucene 10.2.1 =======================

Bug Fixes
---------------------

* GITHUB#14522: Fix DISIDocIdStream::count so that it does not try to count beyond max.
  (Chris Hegarty)

* GITHUB#14523, GITHUB#14530: Correct TermOrdValComparator competitive iterator so that it forces sparse
  field iteration to be at least scoring window baseline when doing intoBitSet. (Ben Trent, Adrien Grand)
